gnpt: fix maven warnings